feat: added btn

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <title>Project Admin</title>
 </head>
 <body>
-    <header id="pageHeader" class="header">Header</header>
-    <article id="mainArticle">Article</article>
+    <header id="pageHeader" class="header">
+        <buttom id="btn-js" class="content__btn">Menu</buttom>
+    </header>
+    <article id="mainArticle" class="content"></article>
     <nav id="mainNav" class="menu">
         <a href="#" class="menu__item">Главная</a>
         <a href="#" class="menu__item">Наша команда</a>
@@ -21,6 +23,6 @@
         <a href="#" class="menu__item">Контакты</a>
     </nav>
     <footer id="pageFooter">Footer</footer>
-<script src="./js/index.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
